ressources/css/Etudiant/styleVueMesOffresEtu.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');

body {
    height: 100vh;
}

.mainMesOffres {
    width: 98%;
    height: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    grid-gap: 1%;
    grid-auto-columns: 1fr;
}

.circle {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background-color: #ff5660;
    border: 1px solid white;
    display: flex;
    justify-content: center;
    align-items: center;
}

.number {
    font-size: 12px;
    color: white;
    position: relative;
}

.mainMesOffres > div {
    height: 98%;
    width: 99%;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    align-content: center;
    padding: 1%;
}

.mainMesOffres > div > div::-webkit-scrollbar {
    width: 10px;
    border-radius: 10px;
    background-color: #ffbfc2;
}

.mainMesOffres > div > div::-webkit-scrollbar-thumb {
    background-color: #ff5660;
    border-radius: 10px;
}

.front {
    width: 65%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    align-content: center;
    flex-direction: row;
}

.wrapError {
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-content: center;
}

.wrapError > img {
    width: 60%;
}

.estCandidat {
    background-color: #c8e7e4;
}

.wrapCandidat {
    width: 98%;
    height: 85%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    align-content: center;
    overflow-y: auto;
}

.enAttente {
    background-color: #ffc4c8;
}

.offre {
    width: 98%;
    height: 130px;
    border-radius: 10px;
    background-color: white;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    align-content: center;
    padding: 2%;
    text-decoration: none;
    transition: background-color 0.5s ease;
}

.offre:hover {
    background-color: #ff9095;
    cursor: pointer;
}

.offre > img {
    width: 25%;
    max-height: 90%;
    padding: 2%;
    border-radius: 10px;
}

.offre > div {
    width: 70%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    align-content: center;
}

.wrapBoutons {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    align-content: center;
    margin-top: 1%;
}

.wrapBoutons > form {
    width: 49%;
    display: flex;
    justify-content: center;
    align-items: center;
    align-content: center;
}

.boutonOffres {
    width: 100px;
    height: 25px;
    border-radius: 50px;
    border: none;
    background-color: #ff5660;
    color: white;
    transition: background-color 0.5s ease;
    display: flex;
    justify-content: center;
    align-items: center;
    align-content: center;
    text-decoration: none;
}

.boutonOffres:hover {
    background-color: white;
    border: 1px solid black;
    color: black;
    cursor: pointer;
}

.disabled {
    opacity: 0.6;
    cursor: default;
}

.disabled:hover {
    background-color: #ff5660;
    border: none;
    color: white;
}

.presMesOffres {
    background-color: #aadcda;
}

